# ddh

./: .dockerignore  .gitignore  README.md  config.py  jupyter_error_analyzer.py  query_error_logs_docker.py  查询aico_key使用的模型.sql
apps_analysis/: README.md  build.sh  config.yaml  config.yaml.template  docker-compose.yml  env.example  pyproject.toml  quick_test.sh
apps_analysis/docs/: MULTI_APP_ERROR_ANALYSIS.md  OFFLINE_DEPLOYMENT.md
apps_analysis/log_analyzer/: __init__.py  server.py
apps_analysis/log_analyzer/plugins/: base.py
apps_analysis/log_analyzer/plugins/analyzers/: __init__.py  base.py
apps_analysis/log_analyzer/plugins/sinks/: minio.py
apps_analysis/log_analyzer/plugins/sources/: __init__.py  base.py  docker.py  file.py
apps_analysis/scripts/: analyze_service.py  check_docker.py  init_db.py
apps_analysis/static/: index.html
db_ops_analyzer/: Dockerfile  README.md  build_and_export.ps1  config.yaml  config.yaml.template  docker-compose.yml  pyproject.toml  validate_config.py
db_ops_analyzer/db_ops_analyzer/: __init__.py  config.py  main.py  server.py  task.py
db_ops_analyzer/db_ops_analyzer/plugins/: __init__.py  base.py
db_ops_analyzer/db_ops_analyzer/plugins/analyzers/: __init__.py  base.py  langgraph.py
db_ops_analyzer/db_ops_analyzer/plugins/sinks/: __init__.py  base.py  file.py
db_ops_analyzer/db_ops_analyzer/plugins/sources/: __init__.py  base.py  mongodb.py  mysql.py  postgresql.py  redis.py
db_ops_analyzer/docs/: CONNECTION_TROUBLESHOOTING.md  EXTERNAL_DB_CONNECTION.md
db_ops_analyzer/scripts/: test_postgresql_connection.py
db_ops_analyzer/static/: index.html
litellm_error_analyzer/: .gitignore  README.md  SQL查询命令.md  run_analyzer.py  操作文档.md
python_offline_env/: .gitignore  README.md  agent_pyproject.toml  build_env.py  mcp_server_pyproject.toml  pyproject.toml  实现原理文档.md  详细操作文档.md  需求验证报告.md
three_apps_diagnosis - 副本/: Dockerfile  build.sh
three_apps_diagnosis - 副本/docs/: AUTO_MONITORING.md  DOCKER_COMPOSE_USAGE.md  PRODUCT_IMPROVEMENT_PLAN.md  TIME_RANGE_QUERY.md
three_apps_diagnosis - 副本/log_analyzer/: config.py  main.py  task.py
three_apps_diagnosis - 副本/log_analyzer/plugins/analyzers/: langgraph.py
three_apps_diagnosis - 副本/log_analyzer/plugins/sinks/: __init__.py  base.py  database.py  file.py
three_apps_diagnosis - 副本/log_analyzer/plugins/sources/: multi.py
three_apps_diagnosis - 副本/scripts/: analyze_service.sh  export_image.sh  load_image.sh
