[build-system]
requires = ["setuptools>=69.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-offline-env"
version = "0.1.0"
description = "Offline-manageable dependency manifest for the 信创 Python 3.12 环境"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "DDH Agent Team" }
]
dependencies = [
    "aiohttp>=3.13.2",
    "cachetools>=6.2.1",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langchain-mcp-adapters>=0.2.1",
    "langfuse",
    "langgraph",
    "markitdown[docx]>=0.1.2",
    "mcp[cli]>=1.25.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "python-dotenv",
    "schedule>=1.2.2",
    "scipy>=1.12.0",
    "streamlit",
    "streamlit-echarts",
    "tabulate>=0.9.0",
    "gradio",
    "gmssl>=3.2.2"
]

[tool.setuptools]
packages = []

